--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://212.74.224.210",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "http-proxy-middleware": "^3.0.3",
     "prettier": "3.3.2",
     "typescript": "^4.8.2"
   }
